--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <h2>
           {{product.name}}
           <em class="pull-right"> {{product.price | currency:"$"}}</em>
+          <!-- <product-title></product-title> TODO: this only works across http requests, would need gulp or other option to run this -->
+            <!-- <product-gallery ng-show="product.images.length"></product-gallery> -->
             <div class="gallery" ng-show="product.images.length" ng-controller="GalleryController as gallery">
               <img class="img img-circle img-thumbnail center-block" ng-src="{{product.images[gallery.current]}}" />
               <ul class="img-thumbnails clearfix">
@@ -96,6 +98,7 @@
 
   <script type="text/javascript" src="angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="products.js"></script>
 
 </body>
 </html>
